Step 1: Title → AI Password Generator with accent

--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
     </nav>
     <section class="hero">
         <p class="hero-eyebrow">Free · No Account · Browser-Only</p>
-        <h1 class="hero-title" id="title">Generate Passwords You Can <span class="accent">Actually Trust</span></h1>
+        <h1 class="hero-title" id="title"><span class="accent">AI</span> Password Generator</h1>
         <p class="hero-sub" id="subtitle">Strong, unique passwords generated instantly in your browser. Nothing ever leaves your device.</p>
     <div class="tool-wrap"><div class="tool-card">
 
@@ -2164,7 +2164,7 @@
 
             const translations = {
                 en: {
-                    title: 'Secure Password Generator',
+                    title: 'AI Password Generator',
                     subtitle: 'Strong, unique passwords generated instantly in your browser. Nothing ever leaves your device.',
                     manualLabel: 'MANUAL MODE',
                     aiLabel: 'AI MODE',
