--- a/index.html
+++ b/index.html
@@ -962,6 +962,11 @@
             font-size: 13px;
             color: var(--text-3);
         }
+        .footer-builder-note { font-size: 11px; color: var(--text-3); font-style: italic; margin-top: 3px; }
+        .local-badge { display: inline-flex; align-items: center; gap: 5px; font-size: 11px; font-weight: 600;
+          color: var(--green); background: rgba(52,208,104,0.1); border: 1px solid rgba(52,208,104,0.25);
+          border-radius: 100px; padding: 3px 10px; text-decoration: none; margin-top: 8px; }
+        .local-badge:hover { background: rgba(52,208,104,0.18); }
         .footer-brand strong {
             font-size: 14px;
             font-weight: 700;
@@ -1627,7 +1632,12 @@
         <div class="footer-inner">
             <div class="footer-brand">
                 <strong>Joël Moyal</strong>
-                <span id="footer-tagline">Free secure password generator</span>
+                <span id="footer-tagline">A free password generator that runs entirely in your browser.</span>
+                <p class="footer-builder-note">Started as a personal security project, then made it public.</p>
+                <a href="https://github.com/JoelMoyal/Password-generator" target="_blank" rel="noopener" class="local-badge">
+                    <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/></svg>
+                    Open source on GitHub
+                </a>
             </div>
             <div class="footer-legal">
                 <span>© 2026 pwasecurity · Joël Moyal</span>
