--- a/index.html
+++ b/index.html
@@ -1557,27 +1557,25 @@
             <p class="section-sub">Practical, no-fluff articles on staying secure in an age of AI, data breaches, and constant credential theft.</p>
             <div class="articles-grid">
 
-                <div class="article-card">
+                <a class="article-card" href="/memorize-passwords.html" style="text-decoration:none;display:block;cursor:pointer;">
                     <div class="article-card-meta">
                         <span class="article-badge badge-category">Memory &amp; Security</span>
-                        <span class="article-badge badge-soon">Coming Soon</span>
                         <span class="article-read-time">~6 min read</span>
                     </div>
                     <div class="article-card-title">How to Memorize Strong Passwords Without Sacrificing Security</div>
                     <p class="article-card-excerpt">Most people choose weak passwords because strong ones are impossible to remember. This guide explores techniques — from memory palaces to spaced repetition — that let you build and retain genuinely secure credentials for the accounts that matter most.</p>
-                    <div class="article-card-cta">Article coming soon — check back shortly.</div>
-                </div>
+                    <div class="article-card-cta">Read article →</div>
+                </a>
 
-                <div class="article-card">
+                <a class="article-card" href="/ai-prompt-security.html" style="text-decoration:none;display:block;cursor:pointer;">
                     <div class="article-card-meta">
                         <span class="article-badge badge-category">AI Safety</span>
-                        <span class="article-badge badge-soon">Coming Soon</span>
                         <span class="article-read-time">~5 min read</span>
                     </div>
                     <div class="article-card-title">AI Prompt Security: What You Should Never Share With an AI</div>
                     <p class="article-card-excerpt">AI assistants feel private, but your prompts may be retained, reviewed, or used for model training. This article breaks down what information is genuinely risky to include in AI prompts, and how to get the help you need without exposing sensitive data.</p>
-                    <div class="article-card-cta">Article coming soon — check back shortly.</div>
-                </div>
+                    <div class="article-card-cta">Read article →</div>
+                </a>
 
             </div>
         </div>
